security/Network_policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-poicy

spec:
  podSelector:
    matchLabels:
      role: db

  policyTypes:
    - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            name: api-pod
    ports:
      - protocol: TCP
        port: 3306

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-poicy

spec:
  podSelector:
    matchLabels:
      role: db

  policyTypes:
    - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            name: api-pod
      - namespaceSelector:
          matchLabels:
            name: prod
      - ipBlock:
          cidr: 172.16.0.25/32
    ports:
      - protocol: TCP
        port: 3306

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-poicy

spec:
  podSelector:
    matchLabels:
      role: db

  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            name: api-pod
      - namespaceSelector:
          matchLabels:
            name: prod
      - ipBlock:
          cidr: 172.16.0.25/32
    ports:
      - protocol: TCP
        port: 3306
  egress:
    - to:
      - ipBlock:
          cidr: 172.16.0.23/32
      ports:
      - protocol: TCP
        port: 80
